carrousel is finally working!

--- a/angular.json
+++ b/angular.json
@@ -22,11 +22,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "node_modules/@glidejs/glide/dist/css/glide.core.min.css",
-              "node_modules/@glidejs/glide/dist/css/glide.theme.min.css",
-              "src/styles.scss"
-            ]
+            "styles": ["src/styles.scss"]
           },
           "configurations": {
             "production": {
